<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0b5571">

    <include
        android:id="@+id/include_header"
        layout="@layout/headernew"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include_header">

        <TableLayout
            android:id="@+id/tl_spinerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/outlet_report_total_sale"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/month" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spin_month"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/dropdown"
                    android:prompt="@string/select_category" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spin_year"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/dropdown"
                    android:prompt="@string/select_type" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_140sdp"
            android:background="@drawable/search_new" />


    </RelativeLayout>


</RelativeLayout>