<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0b5571"
    android:orientation="vertical">

    <include
        android:id="@+id/include_header"
        layout="@layout/headernew"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include_header">

            <TableLayout
                android:id="@+id/cattypelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="TESTER"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100">

                    <TextView
                        style="@style/label_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Category" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/sp_product_category_test"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@drawable/dropdown"
                        android:prompt="@string/select_category" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp">

                    <TextView
                        style="@style/label_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Type" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/sp_product_type_test"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@drawable/dropdown"
                        android:prompt="@string/select_type" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Product" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <Spinner
                        android:id="@+id/sp_products_test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/select_product" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/sizelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_below="@+id/cattypelayout">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="15"
                        android:text="Size:" />

                    <TextView
                        android:id="@+id/tv_product_size_test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="85" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/testlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:visibility="gone"
                android:layout_below="@+id/sizelayout">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/tv_db_id_test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="20" />

                    <TextView
                        android:id="@+id/tv_enacode_test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="40" />

                    <TextView
                        android:id="@+id/tv_category_code_test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="40" />

                    <TextView
                        android:id="@+id/tv_previous_sold_items_tester"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_previous_return_items_tester"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_shadetester"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="20" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/Tablelisttages_tester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/testlayout">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F7DCB4"
                    android:padding="@dimen/_3sdp"
                    android:weightSum="100">

                    <TextView
                        style="@style/list_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="15"
                        android:text="SIZE" />

                    <TextView
                        style="@style/list_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"
                        android:gravity="left"
                        android:text="PRICE"
                        android:visibility="gone" />

                    <TextView
                        style="@style/list_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:gravity="center_horizontal"
                        android:text="PRODUCT"
                        android:visibility="visible" />

                    <TextView
                        style="@style/list_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:gravity="center_horizontal"
                        android:text="CATID"
                        android:visibility="gone" />
                </TableRow>
            </TableLayout>

            <ListView
                android:id="@+id/lv_product_list_tester"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:divider="#F7DCB4"
                android:layout_above="@+id/btn_tester_save"
                android:layout_below="@+id/Tablelisttages_tester"
                android:dividerHeight="@dimen/_1sdp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_tester_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/save_new"
                android:layout_alignParentBottom="true"
                android:visibility="visible" />


    </RelativeLayout>

</RelativeLayout>